# liblog

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Log.cpp  Logger.cpp  Logger.h  README.md  main.cpp
include/: Log.hpp
src/: Log.cpp
tests/: logger_tests.cpp
